--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@nuxt/content": "^2.5.2",
     "@nuxt/image-edge": "^1.0.0-28008586.381b906",
+    "@nuxtjs/fontaine": "^0.2.5",
     "nuxt": "^3.3.3",
     "sass-loader": "10"
   },
